--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,82 @@
-<h1>{{pageTitle}}</h1>
+<!--<h1>{{pageTitle}}</h1>
 <div [innerText]="name"></div>
-<button (click)="onClick()" text="click me">
+<button (click)="onClick()">click me</button>
 <input type="text" [value]="name" (keyup)="name = $event.target.value">
 <input type="text" [(ngModel)]="name">
+
+<br/>-->
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <div class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" [value]="name" (keyup)="name = $event.target.value" placeholder="name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="text" [(ngModel)]="name" placeholder="name" class="form-control">
+                </div>
+                <button (click)="onClick()" class="btn btn-success">Click Me</button>
+            </div>
+        </div>
+        <!--/.navbar-collapse -->
+    </div>
+</nav>
+
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+        <h1>Hello, {{name}}!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron
+            and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" (click)="onClick()" role="button">or Click Me !!! »</a></p>
+    </div>
+</div>
+
+<div class="container">
+    <!-- Example row of columns -->
+    <app-customers>Loading customers...</app-customers>
+
+    <hr>
+
+    <footer>
+        <p>© 2016 Company, Inc.</p>
+    </footer>
+</div>
+
+<!--<app-customers>Loading customers...</app-customers>-->
+
+
+<!--
+//[
+//     {
+//         fName: 'Uvaraj',
+//         lName: 'Thulasiram',
+//         skills: 'xoxo',
+//         company: 'AiyananInc',
+//         location: 'Calgary'
+//     },
+//     {
+//         fName: 'Sheeba',
+//         lName: 'Yegambaram',
+//         skills: 'listening',
+//         company: 'AiyananInc',
+//         location: 'Calgary'
+//     },
+//     {
+//         fName: 'Atheena',
+//         lName: 'Aiyanan',
+//         skills: 'non-stopblabbering',
+//         company: 'NowhereInc',
+//         location: 'Calgary'
+//     }
+// ]-->
